changed _layout.scss to fix caption vertical alignment and fixed links on project markdown.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -272,6 +272,6 @@ height: 100%;
 float: center;
 color: $caption_color;
 text-align: center;
-vertical-align: middle;
+vertical-align: top;
 font-size: $caption_font_size;
 }
